@@ -32,7 +32,8 @@ distribution.
 #include "tinystr.h"
 
 // Error value for find primitive
-const TiXmlString::size_type TiXmlString::npos = static_cast< size_type >(-1);
+const TiXmlString::size_type TiXmlString::npos = static_cast< TiXmlString::size_type >(-1);
+
 
 // Null rep.
 TiXmlString::Rep TiXmlString::nullrep_ = { 0, 0, '\0' };
